# ai-trading-agent-workspace

./: .env.example  .env.prod.example  .gitignore  AlphaOps_Improvement_PR.md  CLAUDE.md  Dockerfile  Infra.md  Makefile  README.md  celerybeat-schedule.db  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.js  main.py  pyproject.toml  workflow-diagram.mmd
.github/workflows/: deploy.yml
agents/: base.py  discovery_agent.py  factor_library.py  financial_analyst.py  market_watch.py  memory_agent.py  news_hunter.py  orchestrator.py  research_analyst.py  risk_monitor.py  sentiment_analyst.py
cockpit/: app.py  schemas.py
cockpit/routers/: agents.py  logs.py  outcomes.py  signals.py
collectors/: market_data.py  news.py
config/: settings.py  universe.py
frontend/: Dockerfile
frontend/app/: layout.tsx  page.tsx
frontend/app/office/: page.tsx
frontend/components/: ActivityLog.tsx  AgentStatusBadge.tsx  SignalCard.tsx  VirtualOffice.tsx
frontend/lib/: api.ts  types.ts
frontend/mocks/: agents.ts  index.ts  logs.ts  signals.ts
frontend/public/virtual-office/: index.html
frontend/public/virtual-office/office/: agents.js  app.js  ui.js
intelligence/: claude_client.py  composite_scorer.py  discord_bot.py  discord_notifier.py  groq_client.py  llm.py  local_client.py  sentiment.py  summarizer.py
memory/: cache.py  database.py  vector_store.py
monitoring/: prometheus.yml
nginx/: entrypoint.sh  nginx-ssl.conf  nginx.conf
scheduler/: tasks.py
scripts/: news_digest.py  run_cycle.py
tests/: conftest.py  test_cache.py  test_claude_client.py  test_cockpit.py  test_composite_scorer.py  test_database.py  test_discord_bot.py  test_discord_notifier.py  test_discovery_agent.py  test_factor_library.py  test_financial_analyst.py  test_intelligence_sentiment.py  test_market_collector.py  test_market_watch.py  test_memory_agent.py  test_news_collector.py  test_news_hunter.py  test_orchestrator.py  test_research_analyst.py  test_risk_monitor.py  test_sentiment_analyst.py  test_summarizer.py  test_vector_store.py
