[project]
name = "alphaops"
version = "0.1.0"
description = "AI-native multi-agent trading intelligence platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    # config
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # AI
    "anthropic>=0.40",
    "sentence-transformers>=3.0",
    # vector store
    "qdrant-client>=1.11",
    # task queue
    "celery[redis]>=5.3",
    # api
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    # data collection
    "yfinance>=0.2",
    "newsapi-python>=0.2",
    "feedparser>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "poethepoet>=0.29",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

# ── Poe tasks ─────────────────────────────────────────────────────────────────
[tool.poe.tasks]
start       = "python main.py"
test        = "pytest tests/ -v"
"test:cov"  = "pytest tests/ -v --cov=. --cov-report=term-missing"
lint        = "ruff check ."
fmt         = "ruff format ."
check       = { sequence = ["lint", "test"] }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
